--- a/main.css
+++ b/main.css
@@ -5,8 +5,8 @@
 .main_video{
 	display: block;
 	margin: 0 auto;
-	width: 75%;
-	height: 75%;
+	width: 100%;
+	height: 60%;
 	filter:grayscale(100%);
 }
 .display_photo{
@@ -14,6 +14,15 @@
 	width: 20%;
 }
 
-.bio{
-	float:left;
+.bottom_logo{
+	width: 5%;
+	margin-left: 47%;
+}
+	
+
+.social_media{
+	width: 100%;
+}
+#in-button{
+	margin-left: 44%;
 }
