--- a/main.css
+++ b/main.css
@@ -1,28 +1,30 @@
 .main{
-	margin-right: 30%;
-	margin-left: 30%;
+	margin-right: 33%;
+	margin-left: 33%;
 }
-.main_video{
-	display: block;
-	margin: 0 auto;
-	width: 100%;
-	height: 60%;
-	filter:grayscale(100%);
-}
-.display_photo{
-	margin-left:20%;
-	width: 20%;
+
+#fixedme{
+	text-align: center;
+	margin-top: 20%;
 }
 
 .bottom_logo{
 	width: 5%;
-	margin-left: 47%;
+	align-self: center;
 }
 	
-
 .social_media{
 	width: 100%;
 }
 #in-button{
 	margin-left: 44%;
+}
+
+body{
+	background: url(mountain.jpg) no-repeat;
+	background-size: cover;
+}
+
+p{
+	color: white;
 }
